# littlecar2

./: .gitignore  4-29.ioc  资源规划.xlsx
jetson/: .gitignore  README.md  main.py  pyproject.toml
jetson/assets/: README.md
jetson/configs/: README.md  default.yaml
jetson/docs/: README.md  上位机开发约束.md  通信架构.md
jetson/models/: README.md
jetson/notebooks/: README.md  test_pin.ipynb  yolo_inf_test.ipynb
jetson/scripts/: README.md  test_circle_detect_max.py  test_cricle_detect_template.py  test_qr.py  test_uart.py  test_yolo.py  test_yolo_v3.py  yolo_infer_example.py
jetson/scripts/二维码/: 生成二维码.py  解析二维码.py
jetson/scripts/彩色物料检测/: 检测颜色（传统）.py  生成图像（yolo数据集）.py  生成图像（yolo数据集）v2.py  生成图像（yolo数据集）v3.py
jetson/scripts/彩色物料检测（传统）/: 生成图像.py
jetson/scripts/旋转物料盘定位/: 基础生成.py  检测定位.py  检测定位yolo.py  物料在盘上生成.py  物料在盘上生成批量.py
jetson/src/: README.md
jetson/src/app/: README.md  __init__.py  actions.py  main.py  robot_main.py  test_workflow.py  workflow.py
jetson/src/comm/: README.md  __init__.py  interface.py  mock_client.py  serial_client.py
jetson/src/domain/: README.md  __init__.py  enums.py  events.py
jetson/src/littlecar2/: README.md  __init__.py  __main__.py
jetson/src/protocol/: README.md  __init__.py  client.py  commands.py  exceptions.py  frame.py  heartbeat.py  transport.py  types.py
jetson/src/vision/: README.md  __init__.py  camera.py  circle_dector.py  marker.py  materials.py  qr.py  (+5 more)
jetson/tests/: README.md  test_app_actions.py  test_circle_detector.py  test_protocol_client.py  test_protocol_frame.py  test_protocol_hardware.py  test_vision.py
(+79 files in other folders)
