[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "littlecar2-jetson"
version = "0.1.0"
description = "Jetson side vision and STM32 communication package for littlecar2."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "pyyaml>=6.0",
  "pyserial>=3.5",
  "ultralytics>=8.0"
]

[project.scripts]
littlecar2 = "littlecar2.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]
