[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "littlecar2-jetson"
version = "0.1.0"
description = "Jetson side vision package for littlecar2."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "ultralytics>=8.0"
]

[project.scripts]
littlecar2 = "app.main:main"

[tool.setuptools.packages.find]
where = ["src"]
